--- a/app/src/main/res/layout/flagment_main1.xml
+++ b/app/src/main/res/layout/flagment_main1.xml
@@ -3,8 +3,13 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:textSize="30sp"
         android:text="프래그먼트1"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="안녕"
+        android:id="@+id/btn"/>
 </LinearLayout>
