--- a/app/src/main/res/layout/popup_save_member.xml
+++ b/app/src/main/res/layout/popup_save_member.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="500dp"
-    android:layout_height="400dp"
-    tools:context="org.soonhyung.beautynote.SaveMemberPopActivity">
+    android:layout_width="400dp"
+    android:layout_height="500dp"
+    tools:context="org.soonhyung.beautynote.popup.SaveMemberPopup">
 
 </LinearLayout>
