--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,11 +78,10 @@
 
     <ListView
         android:id="@+id/menu_listview"
-        android:layout_width="400dp"
+        android:layout_width="320dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:listSelector="#00000000"
-        android:divider="@null"
-        android:background="#123123">
+        android:divider="@null">
     </ListView>
 </android.support.v4.widget.DrawerLayout>
