--- a/app/src/main/res/layout/drawer_list_header.xml
+++ b/app/src/main/res/layout/drawer_list_header.xml
@@ -1,14 +1,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="#F2F2F2"
     android:gravity="center_vertical"
-    android:orientation="horizontal" >
+    android:orientation="vertical" >
 
     <ImageView
         android:id="@+id/imageview_munu_header_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/sub_title"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#FFB2F5" />
 
 </LinearLayout>
