--- a/app/src/main/res/layout/drawer_list.xml
+++ b/app/src/main/res/layout/drawer_list.xml
@@ -3,19 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical" 
-    android:id="@+id/linear_vi">
+    android:orientation="vertical" >
 
     <ImageView
         android:id="@+id/imageview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-
-    <ImageView
-        android:id="@+id/imageview2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dip" />
 
 </LinearLayout>
