--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,16 +12,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="horizontal">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:layout_weight="1">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
                     android:layout_weight="1">
                     <fragment
                         android:id="@+id/frag1"
@@ -29,6 +28,10 @@
                         android:layout_height="match_parent"
                         android:name="org.soonhyung.beautynote.fragment.MainFragment1"/>
                 </LinearLayout>
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="#EAEAEA"/>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -40,31 +43,20 @@
                         android:name="org.soonhyung.beautynote.fragment.MainFragment2"/>
                 </LinearLayout>
             </LinearLayout>
+            <ImageView
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="#EAEAEA"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:layout_weight="1">
-                <LinearLayout
+                <fragment
+                    android:id="@+id/fragment_reserve"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1">
-                    <fragment
-                        android:id="@+id/frag3"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:name="org.soonhyung.beautynote.fragment.MainFragment3"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1">
-                    <fragment
-                        android:id="@+id/frag4"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:name="org.soonhyung.beautynote.fragment.MainFragment4"/>
-                </LinearLayout>
+                    android:name="org.soonhyung.beautynote.fragment.ReserveFragment"/>
             </LinearLayout>
         </LinearLayout>
 
