--- a/app/src/main/res/layout/flagment_memo.xml
+++ b/app/src/main/res/layout/flagment_memo.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#FFEDF6">
+    android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,9 +17,9 @@
             android:textSize="20sp"
             android:textColor="#FFFFFF"
             android:layout_weight="1"
-            android:text="예약현황"/>
+            android:text="메모"/>
         <ImageButton
-            android:id="@+id/btn_add_reserve"
+            android:id="@+id/btn_add_memo"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
@@ -28,11 +28,11 @@
             android:background="#00000000"
             android:src="@drawable/btn_plus_sel"/>" />
     </LinearLayout>
-
     <ListView
-        android:id="@+id/list_reserve"
-        android:layout_weight="1"
+        android:id="@+id/list_memo"
+        android:background="#FFEDF6"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </ListView>
+        android:layout_height="match_parent"></ListView>
+
+
 </LinearLayout>
