--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
                 android:layout_weight="1">
                 <fragment
                     android:id="@+id/fragment_reserve"
@@ -31,32 +30,12 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
                 android:layout_weight="1">
-                <LinearLayout
+                <fragment
+                    android:id="@+id/fragment_memo"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1">
-                    <fragment
-                        android:id="@+id/frag1"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:name="org.soonhyung.beautynote.fragment.MainFragment1"/>
-                </LinearLayout>
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="#EAEAEA"/>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1">
-                    <fragment
-                        android:id="@+id/frag2"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:name="org.soonhyung.beautynote.fragment.MemoFragment"/>
-                </LinearLayout>
+                    android:name="org.soonhyung.beautynote.fragment.MemoFragment"/>
             </LinearLayout>
         </LinearLayout>
 
