--- a/app/src/main/res/layout/popup_save_memo.xml
+++ b/app/src/main/res/layout/popup_save_memo.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="400dp"
     android:layout_height="500dp"
-    android:id="@+id/linear_memo"
     tools:context="org.soonhyung.beautynote.popup.SaveMemoPopup"
     android:orientation="vertical">
     <EditText
@@ -38,6 +37,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <Button
+            android:id="@+id/btn_memo_save"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
@@ -46,6 +46,7 @@
             android:background="#FFB2D9"
             android:text="등록"/>
         <Button
+            android:id="@+id/btn_memo_cancel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
