--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -7,7 +7,7 @@
     tools:context="org.soonhyung.beautynote.activity.IntroActivity">
 
     <ImageView
-        android:id="@+id/introBackImage"
+        android:id="@+id/img_intro_back"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/introbackground"/>
