--- a/app/src/main/res/layout/drawer_list_header.xml
+++ b/app/src/main/res/layout/drawer_list_header.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical" >
 
     <ImageView
-        android:id="@+id/imageview_munu_header_icon"
+        android:id="@+id/img_munu_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/sub_title"/>
