--- a/app/src/main/res/layout/flagment_reserve.xml
+++ b/app/src/main/res/layout/flagment_reserve.xml
@@ -3,19 +3,19 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFEDF6">
+    android:background="@color/listBackColor">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:background="#FFB2D9"
+        android:background="@color/titleBackColor"
         android:orientation="horizontal">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textSize="20sp"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/titleTextColor"
             android:layout_weight="1"
             android:text="예약현황"/>
         <ImageButton
@@ -25,7 +25,7 @@
             android:layout_marginRight="10dp"
             android:scaleType="fitCenter"
             android:layout_weight="1"
-            android:background="#00000000"
+            android:background="@color/Transparency"
             android:src="@drawable/btn_plus_sel"/>" />
     </LinearLayout>
 
