--- a/app/src/main/res/layout/memo_list.xml
+++ b/app/src/main/res/layout/memo_list.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
@@ -9,17 +11,35 @@
         android:layout_height="wrap_content"
         android:visibility="gone"/>
 
-    <TextView
-        android:id="@+id/item_subject"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="3dp"
-        android:padding="3dp"
-        android:textSize="18sp"/>
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+        <TextView
+            android:id="@+id/item_subject"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="3dp"
+            android:padding="3dp"
+            android:textColor="@color/listTextColor"
+            android:textSize="18sp"
+            android:layout_weight="1"
+            android:text="aaa"/>
+
+        <ImageView
+            android:id="@+id/item_visible"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            app:srcCompat="@android:drawable/arrow_down_float"/>
+    </LinearLayout>
 
     <ImageView
+        android:id="@+id/item_line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:visibility="gone"
         android:background="@color/line"/>
 
     <TextView
@@ -28,5 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="3dp"
         android:padding="3dp"
+        android:visibility="gone"
+        android:textColor="@color/listTextColor"
         android:textSize="15sp"/>
 </LinearLayout>
