--- a/app/src/main/res/layout/flagment_main.xml
+++ b/app/src/main/res/layout/flagment_main.xml
@@ -11,28 +11,19 @@
         android:background="@color/titleBackColor"
         android:orientation="horizontal">
         <TextView
+            android:id="@+id/txt_date_time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textSize="20sp"
-            android:textColor="@color/titleTextColor"
-            android:layout_weight="1"
-            android:text="예약현황"/>
-        <ImageButton
-            android:id="@+id/btn_add_reserve"
-            android:layout_width="60dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:scaleType="fitCenter"
-            android:layout_weight="1"
-            android:background="@color/Transparency"
-            android:src="@drawable/btn_plus_sel"/>" />
+            android:textColor="@color/titleTextColor"/>
     </LinearLayout>
-
-    <ListView
-        android:id="@+id/list_reserve"
-        android:layout_weight="1"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </ListView>
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:textColor="@color/listTextColor"
+        android:layout_margin="10dp"
+        android:gravity="center"
+        android:text="뭘 만들지???"/>
 </LinearLayout>
