--- a/app/src/main/res/layout/popup_save_customer.xml
+++ b/app/src/main/res/layout/popup_save_customer.xml
@@ -31,6 +31,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
+                android:paddingLeft="10dp"
                 android:singleLine="true"
                 android:editable="false"
                 android:background="@drawable/edittext_disable"
@@ -61,6 +62,7 @@
                 android:id="@+id/edit_cus_name"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:paddingLeft="10dp"
                 android:layout_weight="2"
                 android:singleLine="true"
                 android:background="@drawable/edittext_enable"
@@ -91,6 +93,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
+                android:paddingLeft="10dp"
+                android:inputType="number"
+                android:hint="( '-' 없이 8자리 숫자 )"
                 android:singleLine="true"
                 android:background="@drawable/edittext_enable"
                 android:layout_margin="5dp"
@@ -121,7 +126,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
+                android:paddingLeft="10dp"
+                android:inputType="number"
                 android:singleLine="true"
+                android:hint="( '-' 없이 숫자만 )"
                 android:background="@drawable/edittext_enable"
                 android:layout_margin="5dp"
                 android:textSize="20sp"/>
@@ -151,6 +159,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
+                android:paddingLeft="10dp"
                 android:singleLine="true"
                 android:background="@drawable/edittext_enable"
                 android:layout_margin="5dp"
@@ -275,6 +284,38 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"/>
             </LinearLayout>
+        </LinearLayout><ImageView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/line"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                android:layout_weight="4"
+                android:gravity="center"
+                android:text="회원권등록"
+                android:textSize="20sp" />
+            <ImageView
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="@color/line"/>
+            <EditText
+                android:id="@+id/edit_cus_point"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:inputType="number"
+                android:gravity="center_vertical|right"
+                android:layout_weight="2"
+                android:singleLine="true"
+                android:paddingRight="10dp"
+                android:background="@drawable/edittext_enable"
+                android:layout_margin="5dp"
+                android:textSize="20sp"/>
         </LinearLayout>
         <ImageView
             android:layout_width="match_parent"
@@ -286,7 +327,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <Button
-            android:id="@+id/btn_customer_save"
+            android:id="@+id/btn_cus_save"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
@@ -295,7 +336,7 @@
             android:background="@color/btnColor"
             android:text="등록"/>
         <Button
-            android:id="@+id/btn_customer_cancel"
+            android:id="@+id/btn_cus_cancel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
